--- a/CSS files/landingpage.css
+++ b/CSS files/landingpage.css
@@ -90,27 +90,29 @@
     width: 100%;
     color: black;
     display: flex;
-    padding: 80px 0px 0px 10px;
+    padding: 80px 0px 0px 0px;
     margin: 0px 20px;
     
   }
 
   .hero1{
-    margin:2% 0% 2% 2%;
+    margin:2% 0% 2% 0%;
+    padding:5% 4%;
   }
   .hero1 h1,.contactus h1, .popularrec h1{
     font-family: 'Poppins';
     font-size: 3.5rem;
     line-height: 90%;
     font-weight: bold;
-    margin: 0;
+    margin: 1px;
   }
+
   .hero1 h3, .hero2 h3{
     font-family: 'Poppins';
     font-size: 2rem;
     line-height: 100%;
     font-weight: 400;
-    margin: 0px;
+    margin: 1px;
 
   }
 /*==================================================*/
@@ -142,7 +144,7 @@
 .viewmore{
   width:50%;
   max-width:50%;
-  padding-left:45%;
+  padding-left:42%;
 }
 .viewmore a{
   margin:0px;
@@ -163,7 +165,7 @@
 }
 /*==================================================*/
   .hero_section2{
-    padding: 40px 30%;
+    padding: 40px 25%;
   }
   .hero2 h3{
     font-size: 2.3rem;
@@ -173,7 +175,7 @@
 
 .img1{
   height:500px;
-  width: 100%;
+  width: 75%;
   background-image: url("../images/landing/cooking.png");
   max-width: 100%;
   background-size: 100%;
